--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     },
     "rules": {
         "no-console": 0,
-        "import/no-unresolved": 0
+        "import/no-unresolved": 0,
+        "camelcase": 0
     }
 }
