--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "no-console": 0,
         "import/no-unresolved": 0,
         "camelcase": 0,
-        "no-undef": 0
+        "no-undef": 0,
+        "no-param-reassign": 0
     }
 }
